<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1_bringup</name>
  <version>0.0.0</version>
  <description>Launch files to bring up the Unitree G1 robot with MoveIt2 and real hardware</description>
  <maintainer email="mqcmd196@hotmail.co.jp">Yoshiki Obinata</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <exec_depend>g1_hardware</exec_depend>
  <exec_depend>g1_moveit_config</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
